dynamic default stage

--- a/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -3,6 +3,7 @@
     #stepper
     class="pokemon-form-container alternate"
     orientation="vertical"
+    linear
   >
     <mat-step
       state="details"
