summary and type cores broken out

--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -1,6 +1,4 @@
-<div
-  class="min-h-full bg-gradient-to-r from-aTeam-100 via-menu-100 to-bTeam-100"
->
+<div class="min-h-full">
   <div class="flex px-2 pt-2">
     <div class="w-fit">
       <button
