--- a/src/app/drafts/matchup-overview/matchup/summary/summary.component.html
+++ b/src/app/drafts/matchup-overview/matchup/summary/summary.component.html
@@ -1,296 +1,15 @@
-@if (summaries) {
-  <div class="w-full">
-    <div class="flex w-full px-1 bg-menu-400 rounded-t-xl">
-      <div class="flex w-full pb-1 border-b border-menu-300">
-        <div class="w-full text-xl font-bold text-center">Team Overview</div>
-        <button
-          (click)="swapTeams()"
-          class="px-3 mx-1 mt-2 ml-auto text-sm rounded-md shadow-md"
-          [ngClass]="clickColor(true)"
-        >
-          ⇄
-        </button>
+<div class="content-container" [ngClass]="{ alternate: opponent }">
+  <div class="table-wrapper">
+    <div class="title-container">
+      <div class="table-label">Draft Summary</div>
+      <div class="flex">
+        <div>
+          <mat-slide-toggle [(ngModel)]="opponent"></mat-slide-toggle>
+        </div>
       </div>
     </div>
-
-    <div class="w-full overflow-x-auto border-4 border-menu-400">
-      <table
-        matSort
-        matSortActive="spe"
-        matSortDirection="desc"
-        matSortDisableClear
-        (matSortChange)="sortData($event)"
-        class="rounded-md table-fixed w-min"
-        [ngClass]="teamColor()"
-      >
-        <tr class="bg-menu-400">
-          <th class="w-6"></th>
-          <th class="w-12 min-w-8"></th>
-          <th
-            class="w-24 cursor-pointer hover:text-menu-200"
-            mat-sort-header="name"
-          >
-            Name
-          </th>
-          <th class="w-16 text-left">Types</th>
-          <th class="w-20">Abilities</th>
-          <th
-            mat-sort-header="hp"
-            class="w-12 cursor-pointer hover:text-menu-200"
-            start="desc"
-          >
-            HP
-          </th>
-          <th
-            class="w-12 cursor-pointer hover:text-menu-200"
-            mat-sort-header="atk"
-            start="desc"
-          >
-            ATK
-          </th>
-          <th
-            class="w-12 cursor-pointer hover:text-menu-200"
-            mat-sort-header="def"
-            start="desc"
-          >
-            DEF
-          </th>
-          <th
-            class="w-12 cursor-pointer hover:text-menu-200"
-            mat-sort-header="spa"
-            start="desc"
-          >
-            SPA
-          </th>
-          <th
-            class="w-12 cursor-pointer hover:text-menu-200"
-            mat-sort-header="spd"
-            start="desc"
-          >
-            SPD
-          </th>
-          <th
-            class="w-12 cursor-pointer hover:text-menu-200"
-            mat-sort-header="spe"
-            start="desc"
-          >
-            SPE
-          </th>
-        </tr>
-        @for (pokemon of teams[selectedTeam]; track $index) {
-          <tr class="h-12 border-b border-menu-400">
-            <td>
-              @if (pokemon.capt) {
-                <div class="w-6">
-                  @if (pokemon.capt.tera) {
-                    <tera [pokemon]="pokemon"></tera>
-                  }
-                  @if (pokemon.capt.z) {
-                    <z-svg></z-svg>
-                  }
-                </div>
-              }
-            </td>
-            <td>
-              <sprite [pokemon]="pokemon"></sprite>
-            </td>
-            <td class="text-sm">{{ pokemon.name }}</td>
-            <td>
-              @for (type of pokemon.types; track $index) {
-                <img
-                  src="../../../assets/icons/types/{{ type }}.png"
-                  onerror="this.src='../../../assets/icons/types/Unknown.png'"
-                  alt="{{ type }}"
-                />
-              }
-            </td>
-
-            <td>
-              @for (ability of pokemon.abilities; track $index) {
-                <div class="text-center">
-                  {{ ability }}
-                </div>
-              }
-            </td>
-            <td
-              class="text-center border-l-2 border-menu-400"
-              [ngClass]="statColor(pokemon.baseStats.hp)"
-            >
-              {{ pokemon.baseStats.hp }}
-            </td>
-            <td
-              class="text-center"
-              [ngClass]="statColor(pokemon.baseStats.atk)"
-            >
-              {{ pokemon.baseStats.atk }}
-            </td>
-            <td
-              class="text-center"
-              [ngClass]="statColor(pokemon.baseStats.def)"
-            >
-              {{ pokemon.baseStats.def }}
-            </td>
-            <td
-              class="text-center"
-              [ngClass]="statColor(pokemon.baseStats.spa)"
-            >
-              {{ pokemon.baseStats.spa }}
-            </td>
-            <td
-              class="text-center"
-              [ngClass]="statColor(pokemon.baseStats.spd)"
-            >
-              {{ pokemon.baseStats.spd }}
-            </td>
-            <td
-              class="text-center"
-              [ngClass]="statColor(pokemon.baseStats.spe)"
-            >
-              {{ pokemon.baseStats.spe }}
-            </td>
-          </tr>
-        }
-        <tr class="border-t-2 bg-menu-300 border-menu-400">
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td class="text-center">Average</td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.mean.hp)"
-          >
-            {{ summaries[selectedTeam].stats.mean.hp }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.mean.atk)"
-          >
-            {{ summaries[selectedTeam].stats.mean.atk }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.mean.def)"
-          >
-            {{ summaries[selectedTeam].stats.mean.def }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.mean.spa)"
-          >
-            {{ summaries[selectedTeam].stats.mean.spa }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.mean.spd)"
-          >
-            {{ summaries[selectedTeam].stats.mean.spd }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.mean.spe)"
-          >
-            {{ summaries[selectedTeam].stats.mean.spe }}
-          </td>
-        </tr>
-        <tr class="bg-menu-300">
-          <td></td>
-          <td></td>
-          <td class="flex">
-            <input type="range" min="20" max="140" [(ngModel)]="baseValue" />
-            <input
-              type="number"
-              [(ngModel)]="baseValue"
-              min="20"
-              max="140"
-              value="{{ baseValue }}"
-              class="w-8 bg-transparent"
-            />
-          </td>
-          <td></td>
-          <td class="text-center">Median</td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.median.hp)"
-          >
-            {{ summaries[selectedTeam].stats.median.hp }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.median.atk)"
-          >
-            {{ summaries[selectedTeam].stats.median.atk }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.median.def)"
-          >
-            {{ summaries[selectedTeam].stats.median.def }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.median.spa)"
-          >
-            {{ summaries[selectedTeam].stats.median.spa }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.median.spd)"
-          >
-            {{ summaries[selectedTeam].stats.median.spd }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.median.spe)"
-          >
-            {{ summaries[selectedTeam].stats.median.spe }}
-          </td>
-        </tr>
-        <tr class="bg-menu-300">
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td class="text-center">Max</td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.max.hp)"
-          >
-            {{ summaries[selectedTeam].stats.max.hp }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.max.atk)"
-          >
-            {{ summaries[selectedTeam].stats.max.atk }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.max.def)"
-          >
-            {{ summaries[selectedTeam].stats.max.def }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.max.spa)"
-          >
-            {{ summaries[selectedTeam].stats.max.spa }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.max.spd)"
-          >
-            {{ summaries[selectedTeam].stats.max.spd }}
-          </td>
-          <td
-            class="text-center"
-            [ngClass]="statColor(summaries[selectedTeam].stats.max.spe)"
-          >
-            {{ summaries[selectedTeam].stats.max.spe }}
-          </td>
-        </tr>
-      </table>
-    </div>
-    <div class="w-full h-3 rounded-b-full bg-menu-400"></div>
+    <summary-core
+      [summary]="opponent ? summaries[1] : summaries[0]"
+    ></summary-core>
   </div>
-}
+</div>
