--- a/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.html
+++ b/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.html
@@ -1,153 +1,24 @@
-<div class="w-full">
-  <div class="flex w-full px-1 bg-menu-400 rounded-t-xl">
-    <div class="flex w-full pb-1 border-b border-menu-300">
-      <h1 class="w-full text-xl font-bold text-center">Defensive Type Chart</h1>
-      <div class="flex space-x-1 items-center p-1">
-        <div class="flex space-x-1 bg-menu-250 p-1 shadow-inner rounded">
-          <span>Abilities:</span>
-          <input type="checkbox" [(ngModel)]="abilities" />
+<div class="content-container" [ngClass]="{ alternate: opponent }">
+  <div class="table-wrapper">
+    <div class="title-container">
+      <div class="table-label">Defensive Type Chart</div>
+      <div class="flex">
+        <div>
+          <mat-slide-toggle [(ngModel)]="abilities"></mat-slide-toggle>
+          Abilities
         </div>
-        <button
-          (click)="swapTeams()"
-          class="px-3 mx-1 mt-2 ml-auto text-sm rounded-md shadow-md"
-          [ngClass]="clickColor(true)"
-        >
-          ⇄
-        </button>
+        <div>
+          <mat-slide-toggle [(ngModel)]="opponent"></mat-slide-toggle>
+        </div>
       </div>
     </div>
+    <typechart-core
+      [typechart]="opponent ? typecharts[1] : typecharts[0]"
+      [abilities]="abilities"
+    ></typechart-core>
+
+    <typestats-core
+      [typechart]="opponent ? typecharts[1] : typecharts[0]"
+    ></typestats-core>
   </div>
-  <div class="w-full overflow-x-auto border-4 border-menu-400">
-    <table class="table-fixed bg-menu-100">
-      <thead class="">
-        <tr class="">
-          <td
-            class="border-l pr-1 border-r-4 border-menu-400 text-center"
-            [ngClass]="teamColor()"
-          >
-            On/Off
-          </td>
-          <th
-            class="border-b-2 border-menu-400"
-            *ngFor="let type of types"
-            (click)="sortByType(type)"
-            [ngClass]="sortedTypeColor(type)"
-          >
-            <img
-              class=""
-              src="../../../../assets/icons/types/{{ type }}.png"
-              onerror="this.src='../../../../assets/icons/types/Unknown.png'"
-              alt="{{ type }}"
-            />
-          </th>
-        </tr>
-      </thead>
-      <tbody class="">
-        <tr *ngFor="let pokemon of typecharts[selectedTeam].team" class="">
-          <th
-            class="w-12 border-l border-r-4 border-menu-400"
-            [ngClass]="clickColor()"
-            (click)="toggleVisible(pokemon)"
-          >
-            <sprite
-              [pokemon]="pokemon"
-              [class.opacity-60]="pokemon.disabled"
-            ></sprite>
-          </th>
-          <td
-            *ngFor="let type of types"
-            class="text-center border"
-            [ngClass]="
-              typeColor(
-                pokemon.weak[this.useAbilities()][type],
-                pokemon.disabled!
-              )
-            "
-          >
-            {{ pokemon.weak[this.useAbilities()][type] }}
-          </td>
-        </tr>
-      </tbody>
-      <thead class="border-b-4 border-menu-400">
-        <tr class="">
-          <th
-            class="border-l border-r-4 border-menu-400"
-            [ngClass]="teamColor()"
-          ></th>
-          <th
-            class="border-t-2 border-menu-400"
-            *ngFor="let type of types"
-            (click)="sortByType(type)"
-            [ngClass]="sortedTypeColor(type)"
-          >
-            <img
-              class="min-w-6"
-              src="../../../../assets/icons/types/{{ type }}.png"
-              onerror="this.src='../../../../assets/icons/types/Unknown.png'"
-              alt="{{ type }}"
-            />
-          </th>
-        </tr>
-      </thead>
-      <tfoot id="typeSum" class="bg-menu-300">
-        <tr>
-          <th
-            class="text-xs border border-r-2 bg-scale-negative-3 text-scale-negative-text border-menu-400"
-          >
-            Weaks
-          </th>
-          <td
-            *ngFor="let weakness of weaknesses"
-            class="text-center border"
-            [ngClass]="weakColor(weakness)"
-          >
-            {{ weakness }}
-          </td>
-        </tr>
-        <tr>
-          <th
-            class="text-xs border border-r-2 bg-scale-positive-3 text-scale-positive-text border-menu-400"
-          >
-            Resists
-          </th>
-          <td
-            *ngFor="let resistance of resistances"
-            class="text-center border"
-            [ngClass]="resistColor(resistance)"
-          >
-            {{ resistance }}
-          </td>
-        </tr>
-        <tr>
-          <th
-            class="text-xs bg-gradient-to-r from-scale-negative-2 from-50% to-scale-positive-2 to-50% border text-scale-positive-text border-menu-400 border-r-2"
-          >
-            Diff
-          </th>
-          <td
-            *ngFor="let diff of difference"
-            class="text-center border"
-            [ngClass]="diffColor(diff)"
-          >
-            {{ diff }}
-          </td>
-        </tr>
-        <tr>
-          <th
-            class="text-xs border border-r-2 bg-gradient-to-r from-scale-negative-3 via-menu-200 to-scale-positive-3 border-menu-400"
-          >
-            Log
-          </th>
-          <td
-            *ngFor="let diff of differential"
-            class="text-center border"
-            [ngClass]="diffColor(diff)"
-          >
-            {{ diff | number: "1.0-0" }}
-          </td>
-        </tr>
-      </tfoot>
-    </table>
-  </div>
-  <div class="w-full h-3 rounded-b-full bg-menu-400"></div>
 </div>
