--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -1,237 +1,21 @@
-@if (typechart) {
-  <div class="content-container">
-    <div class="table-wrapper">
-      <div class="title-container">
-        <div class="table-label">Defensive Type Chart</div>
-        <div>
-          <mat-slide-toggle [(ngModel)]="abilities"></mat-slide-toggle>
-          Abilities
-        </div>
+<div class="content-container">
+  <div class="table-wrapper">
+    <div class="title-container">
+      <div class="table-label">Defensive Type Chart</div>
+      <div>
+        <mat-slide-toggle [(ngModel)]="abilities"></mat-slide-toggle>
+        Abilities
       </div>
-      <table>
-        <thead>
-          <tr>
-            <th></th>
-            @for (type of types; track $index) {
-              <th
-                class="action-cell"
-                (click)="setSort(type)"
-                (mouseenter)="columnHovered.next(type)"
-                (mouseleave)="columnHovered.next(null)"
-                [ngClass]="{
-                  'column-hovered': type === columnHovered.value,
-                }"
-              >
-                <div class="flex-wrapper">
-                  <div
-                    class="type-container"
-                    [ngClass]="{
-                      'sort-press': sortedBy.value === type,
-                    }"
-                    [style.backgroundColor]="typeColor(type)"
-                  >
-                    <div class="type-icon-wrapper">
-                      <img
-                        src="../../../assets/icons/types/gen9icon/{{
-                          type
-                        }}.png"
-                        onerror="this.src='../../../assets/icons/types/Unknown.png'"
-                        alt="{{ type }}"
-                      />
-                    </div>
-                    <span class="type-text">{{ type }}</span>
-                  </div>
-                </div>
-              </th>
-            }
-          </tr>
-        </thead>
-        <tbody>
-          @for (pokemon of sortedTeam | async; track $index) {
-            <tr>
-              <td class="action-cell" (click)="toggleVisible(pokemon)">
-                <div class="flex-wrapper">
-                  <div class="sprite-wrapper">
-                    <sprite
-                      size="3rem"
-                      tooltipPosition="left"
-                      [disabled]="pokemon.disabled"
-                      flipped
-                      [pokemon]="pokemon"
-                    ></sprite>
-                  </div>
-                </div>
-              </td>
-              @for (type of types; track $index) {
-                <td
-                  class="type-cell"
-                  (mouseenter)="columnHovered.next(type)"
-                  (mouseleave)="columnHovered.next(null)"
-                  [ngClass]="{ 'column-hovered': type === columnHovered.value }"
-                >
-                  <div class="flex-wrapper">
-                    <div
-                      class="type-wrapper"
-                      [ngClass]="
-                        weaknessColor(
-                          pokemon.weak[this.abilityIndex][type],
-                          pokemon.disabled!
-                        )
-                      "
-                    >
-                      {{ pokemon.weak[this.abilityIndex][type] }}
-                    </div>
-                  </div>
-                </td>
-              }
-            </tr>
-          }
-        </tbody>
-      </table>
     </div>
-    <div class="table-wrapper">
-      <div class="title-container">
-        <div class="table-label">Team Typing Statistics</div>
-      </div>
-      <table>
-        <thead>
-          <tr>
-            <th></th>
-            @for (type of types; track $index) {
-              <th
-                (mouseenter)="columnHovered.next(type)"
-                (mouseleave)="columnHovered.next(null)"
-                [ngClass]="{ 'column-hovered': type === columnHovered.value }"
-              >
-                <div class="flex-wrapper">
-                  <div
-                    class="type-container-small"
-                    [style.backgroundColor]="typeColor(type)"
-                  >
-                    <span class="type-text">{{ type }}</span>
-                  </div>
-                </div>
-              </th>
-            }
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th>
-              <div class="stat-label bg-menu-300">Count</div>
-            </th>
-            @for (type of types; track $index) {
-              <td
-                class="stat-cell"
-                (mouseenter)="columnHovered.next(type)"
-                (mouseleave)="columnHovered.next(null)"
-                [ngClass]="{ 'column-hovered': type === columnHovered.value }"
-              >
-                <div class="flex-wrapper">
-                  <div
-                    class="stat-wrapper"
-                    [ngClass]="countColor(counts[$index])"
-                  >
-                    {{ counts[$index] | number: "1.0-0" }}
-                  </div>
-                </div>
-              </td>
-            }
-          </tr>
-          <tr>
-            <th><div class="stat-label bg-scale-negative-3">Weaks</div></th>
-            @for (type of types; track $index) {
-              <td
-                class="stat-cell"
-                (mouseenter)="columnHovered.next(type)"
-                (mouseleave)="columnHovered.next(null)"
-                [ngClass]="{ 'column-hovered': type === columnHovered.value }"
-              >
-                <div class="flex-wrapper">
-                  <div
-                    class="stat-wrapper"
-                    [ngClass]="weakColor(weaknesses[$index])"
-                  >
-                    {{ weaknesses[$index] | number: "1.0-0" }}
-                  </div>
-                </div>
-              </td>
-            }
-          </tr>
-          <tr>
-            <th><div class="stat-label bg-scale-positive-3">Resists</div></th>
-            @for (type of types; track $index) {
-              <td
-                class="stat-cell"
-                (mouseenter)="columnHovered.next(type)"
-                (mouseleave)="columnHovered.next(null)"
-                [ngClass]="{ 'column-hovered': type === columnHovered.value }"
-              >
-                <div class="flex-wrapper">
-                  <div
-                    class="stat-wrapper"
-                    [ngClass]="resistColor(resistances[$index])"
-                  >
-                    {{ resistances[$index] | number: "1.0-0" }}
-                  </div>
-                </div>
-              </td>
-            }
-          </tr>
-          <tr>
-            <th>
-              <div
-                class="stat-label bg-gradient-to-r from-scale-negative-3 from-50% to-scale-positive-3 to-50%"
-              >
-                Diff
-              </div>
-            </th>
-            @for (type of types; track $index) {
-              <td
-                class="stat-cell"
-                (mouseenter)="columnHovered.next(type)"
-                (mouseleave)="columnHovered.next(null)"
-                [ngClass]="{ 'column-hovered': type === columnHovered.value }"
-              >
-                <div class="flex-wrapper">
-                  <div
-                    class="stat-wrapper"
-                    [ngClass]="diffColor(difference[$index])"
-                  >
-                    {{ difference[$index] | number: "1.0-0" }}
-                  </div>
-                </div>
-              </td>
-            }
-          </tr>
-          <tr>
-            <th>
-              <div
-                class="stat-label bg-gradient-to-r from-scale-negative-3 via-menu-200 to-scale-positive-3"
-              >
-                Log
-              </div>
-            </th>
-            @for (type of types; track $index) {
-              <td
-                class="stat-cell"
-                (mouseenter)="columnHovered.next(type)"
-                (mouseleave)="columnHovered.next(null)"
-                [ngClass]="{ 'column-hovered': type === columnHovered.value }"
-              >
-                <div class="flex-wrapper">
-                  <div
-                    class="stat-wrapper"
-                    [ngClass]="diffColor(differential[$index])"
-                  >
-                    {{ differential[$index] | number: "1.0-0" }}
-                  </div>
-                </div>
-              </td>
-            }
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <typechart-core
+      [typechart]="typechart"
+      [abilities]="abilities"
+    ></typechart-core>
   </div>
-}
+  <div class="table-wrapper">
+    <div class="title-container">
+      <div class="table-label">Team Typing Statistics</div>
+    </div>
+    <typestats-core [typechart]="typechart"></typestats-core>
+  </div>
+</div>
